# src/modules/budgets/types/db_model.ts
@@ -6,7 +6,6 @@ export type BudgetWithoutTimestamps = {
   percentage: number;
   remaining_allocation: number;
   budget_configuration_id: number | null;
-  transfer_to_budget_id: number | null;
   monthly_wage_id: number | null;
   user_id: string;
 } | null;
