# swagger.yaml
@@ -12,6 +12,8 @@ tags:
     description: Operations related to users
   - name: Budgets Configurations
     description: Operations related to budget configurations
+  - name: Budgets
+    description: Operations related to budgets
 
 paths:
   /users:
@@ -62,6 +64,39 @@ paths:
           description: User created successfully
         '400':
           description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+
+  /budgets/{id}:
+    get:
+      tags:
+        - Budgets
+      summary: Get a budget by ID
+      parameters:
+        - $ref: '#/components/parameters/IDParam'
+      responses:
+        '200':
+          description: Budget found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BudgetDetails'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        '404':
+          description: Budget not found
           content:
             application/json:
               schema:
@@ -145,26 +180,26 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateBudgetConfiguration'
       responses:
-        204:
+        '204':
           description: Budget configuration updated successfully
           content:
             application/json:
               schema:
                 type: boolean
                 example: true
-        400:
+        '400':
           description: Bad request, invalid input
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        404:
+        '404':
           description: Budget configuration not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        500:
+        '500':
           description: Internal server error
           content:
             application/json:
@@ -189,21 +224,21 @@ paths:
             schema:
               $ref: '#/components/schemas/DeleteBudgetConfigurationBody'
       responses:
-        204:
+        '204':
           description: Budget configuration deleted successfully
-        400:
+        '400':
           description: Bad request, invalid input
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        404:
+        '404':
           description: Budget configuration not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        500:
+        '500':
           description: Internal server error
           content:
             application/json:
@@ -242,7 +277,13 @@ components:
             type: string
             format: date
             description: The deletion date of the budget configuration in `YYYY-MM-DD` format.
-
+    IDParam:
+      name: id
+      in: path
+      required: true
+      description: The ID of the entity to retrieve.
+      schema:
+        type: integer
   schemas:
     BudgetConfigurationWithBudgets:
       type: object
@@ -283,6 +324,42 @@ components:
         percentage:
           type: integer
           example: 30
+    BudgetDetails:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        user_id:
+          type: string
+          format: uuid
+        name:
+          type: string
+          maxLength: 30
+        percentage:
+          type: number
+          format: float
+        remaining_allocation:
+          type: number
+          format: float
+        budget_configuration_id:
+          type: integer
+          format: int32
+        transfer_to_budget_id:
+          type: integer
+          format: int32
+        monthly_wage_id:
+          type: integer
+          format: int32
+        created_at:
+          type: string
+          format: date
+        updated_at:
+          type: string
+          format: date
+        deleted_at:
+          type: string
+          format: date
     PostUser:
       type: object
       properties:
